...
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primaryColor"
                app:title="@string/app_name"
                app:titleTextColor="@color/white" />

            <ImageView
                android:id="@+id/iv_tvshowdetail_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/iv_movie_detail_height"
                tools:src="@color/primaryColor"
                android:scaleType="fitXY"
                android:contentDescription="@string/banner_movie"/>

...
                android:layout_marginTop="-25dp"
                android:layout_marginStart="@dimen/margin_container"
                android:layout_marginEnd="@dimen/margin_container"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_tvshowdetail_poster"
                    android:layout_width="@dimen/iv_movdetail_poster_width"
                    android:layout_height="@dimen/iv_movdetail_poster_height"
                    android:contentDescription="@string/movie_detail_poster"
                    android:scaleType="fitXY"
                    tools:src="@color/primaryColorDark"/>

...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tvshow_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/title_movie"
                        android:textSize="@dimen/tv_movdetail_title"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_tvshow_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/genres"
                        android:maxLines="2"
                        android:textSize="@dimen/tv_movdetail_genre"
                        android:textColor="@color/softGrey"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
...
                                    android:maxLines="2"
                                    android:textSize="@dimen/tv_movdetail_genre"
                                    android:textColor="@color/softGrey"/>


                                <TextView
                                    android:id="@+id/tv_tvshow_date"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="6dp"
                                    tools:text="@string/release_date_content"
                                    android:maxLines="2"
                                    android:textSize="@dimen/tv_movdetail_genre"
...
                                    android:maxLines="2"
                                    android:textSize="@dimen/tv_movdetail_genre"
                                    android:textColor="@color/softGrey"/>


                                <TextView
                                    android:id="@+id/tv_tvshow_runtime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="6dp"
                                    tools:text="@string/runtime_content"
                                    android:maxLines="2"
                                    android:textSize="@dimen/tv_movdetail_genre"
...
                                    android:maxLines="2"
                                    android:textSize="@dimen/tv_movdetail_genre"
                                    android:textColor="@color/softGrey"/>


                                <TextView
                                    android:id="@+id/tv_tvshow_season_eps"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="6dp"
                                    tools:text="@string/season_episode_content"
                                    android:maxLines="2"
                                    android:textSize="@dimen/tv_movdetail_genre"
...
                                    android:maxLines="2"
                                    android:textSize="@dimen/tv_movdetail_genre"
                                    android:textColor="@color/softGrey"/>


                                <TextView
                                    android:id="@+id/tv_tvshow_status"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="6dp"
                                    tools:text="@string/status_content"
                                    android:maxLines="2"
                                    android:textSize="@dimen/tv_movdetail_genre"
...
                android:textColor="@color/black"
                android:textSize="@dimen/tv_movdetail_title"
                android:layout_marginStart="@dimen/margin_container"
                android:layout_marginTop="@dimen/margin_container"/>

            <TextView
                android:id="@+id/tv_tvshow_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/description_content"
                android:textSize="@dimen/description_content"
                android:layout_marginStart="@dimen/margin_container"
...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_container">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recomended_tvshow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:visibility="invisible"
                    android:layout_marginTop="@dimen/margin_container"
                    tools:listitem="@layout/item_horizontal"/>
...
